--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="com.kurkov.sunshine"
-          xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest
+    package="com.kurkov.sunshine"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <!-- This permission is necessary in order for Sunshine to perform network access. -->
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
